fix bug overlap images

--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -127,3 +127,13 @@
     width: 1320px;
   }
 }
+
+@media (min-width: 1500px) {
+  .post-item {
+    width: calc(100% / 6);
+  }
+
+  .grid-center {
+    width: 1420px;
+  }
+}
